<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:clipToPadding="false"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/charNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:digits="0123456789"
                    android:hint="@string/number_of_characters"
                    android:inputType="numberDecimal"
                    android:maxLength="3" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textinput1">

                <EditText
                    android:id="@+id/generatedPassword"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/generatedpassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/clipboard_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/textinput2"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/copy_to_clipboard" />

            <Button
                android:id="@+id/save_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/clipboard_button"
                android:layout_below="@id/textinput2"
                android:layout_marginRight="2dp"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/save_text" />

            <Button
                android:id="@+id/clear_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput2"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/clear_text" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/clayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_generate"
            app:rippleColor="@color/rippleColor" />

    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>