<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:clipToPadding="false"
    android:focusableInTouchMode="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/clayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LayoutcharNumber">

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/charNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:dsb_min="1"
                app:dsb_max="100"
                app:dsb_indicatorElevation="4dp"
                app:dsb_indicatorColor="@color/colorPrimary"
                app:dsb_progressColor="@color/colorAccent"
                app:dsb_trackHeight="2.5dp"
                app:dsb_scrubberHeight="2.5dp"
                app:dsb_rippleColor="#AABBBBBB"
                app:dsb_allowTrackClickToDrag="true"
                app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
                app:dsb_thumbSize="18dp"/>

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LayoutcharNumber"
                android:layout_marginTop="16dp" >

                <EditText
                    android:id="@+id/generatedPassword"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/generatedpassword" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/textinput2"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/save_text"
                android:textColor="#FFF"
                android:theme="@style/ButtonSave"/>

            <Button
                android:id="@+id/clipboard_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput2"
                android:layout_toLeftOf="@id/save_button"
                android:layout_marginRight="2dp"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/copy_to_clipboard" />

            <Button
                android:id="@+id/clear_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput2"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/clear_text"
                android:textColor="#ea4335"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_generate"
            app:rippleColor="@color/rippleColor" />

    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>